# pynrfjprog

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  PKG-INFO  README.md  pyproject.toml  sca_pipeline.groovy  setup.cfg  setup.py
pynrfjprog/: API.py  APIError.py  Hex.py  HighLevel.py  JLink.py  LowLevel.py  MultiAPI.py  Parameters.py  QspiDefault.ini  RTTAsyncIO.py  __init__.py  config.toml
pynrfjprog/docs/: DllCommonDefinitions.h  __init__.py  highlevelnrfjprogdll.h  jlinkarm_nrf51_nrfjprogdll.h  jlinkarm_nrf52_nrfjprogdll.h  jlinkarm_nrf53_nrfjprogdll.h  jlinkarm_nrf91_nrfjprogdll.h  jlinkarm_unknown_nrfjprogdll.h  nrf51_nrfjprogdll.h  nrf52_nrfjprogdll.h  nrfdfu.h  nrfjprog_release_notes.txt  nrfjprogdll.h
pynrfjprog/examples/: __init__.py  highlevel_memory_read_write.py  highlevel_program_hex.py  memory_read_write.py  nrf52_dk_blinky.hex  nrf53_dk_blinky.hex  nrf9160_pca20035_modem_upgrade_over_serial.py  program_hex.py  python_help.py  rtt_asyncio.py  rtt_callback.py  rtt_synchronous.py
pynrfjprog/lib_armhf/: __init__.py
pynrfjprog/lib_x64/: __init__.py  highlevelnrfjprog.lib  jlinkarm_nrf51_nrfjprog.lib  jlinkarm_nrf52_nrfjprog.lib  jlinkarm_nrf53_nrfjprog.lib  jlinkarm_nrf91_nrfjprog.lib  jlinkarm_unknown_nrfjprog.lib  libhighlevelnrfjprog.dylib  libjlinkarm_nrf51_nrfjprogdll.dylib  libjlinkarm_nrf52_nrfjprogdll.dylib  libjlinkarm_nrf53_nrfjprogdll.dylib  libjlinkarm_nrf91_nrfjprogdll.dylib  libjlinkarm_unknown_nrfjprogdll.dylib  libnrfdfu.dylib  libnrfdfudll.dylib  libnrfjprogdll.dylib  nrfdfu.lib  nrfjprog.lib
tests/: ci_tests.py
(+30 files in other folders)
